# crsa

./: .gitignore  README.md  TODO  correct_extension.py  pyproject.toml  requirements.txt  run.sh  slurm-795741.out
configs/find_a1/: size=6_alpha=2.5.yaml
configs/hyperparams/: find_a1.yaml
configs/mddial/: llama_alpha=2.5.yaml  pythia_alpha=2.5.yaml
configs/rsa/: default.yaml  dummy.yaml  no_structural_zeros.yaml
configs/worlds/: crsa_toy_game.yaml  dummy.yaml  findA1.yaml  findA1_simple.yaml  find_a1.yaml  multiround_toy_game.yaml  no_structural_zeros.yaml  toy_game.yaml
notebooks/: boards.ipynb  dataset.ipynb  draft.ipynb  infojigsaw_results.ipynb  pub.ipynb  system_prompts.ipynb
src/crsa.v0/scripts/: compare_models.py  rsa_dataset.py  rsa_hyperparams.py  yrsa_hyperparams.py
src/crsa.v0/src/: baselines.py  crsa.py  crsa_turn.py  literal.py  literal_turn.old.py  single_turn_crsa.py
src/crsa.v0/tests/: crsa.py  rsa.py
src/crsa.v1/scripts/: parameters.py  run_infojigsaw.py
src/crsa.v1/src/: crsa.py  crsa_turn.py  infojigsaw.py  multiturn_rsa.py  toy_crsa.py  toy_crsa_turn.py
src/crsa.v2/scripts/: run_findA1.py  run_infojigsaw.py
src/crsa.v2/src/: crsa.py  findA1_agents.py  infojigsaw.py  llm_dialog.py  memoryless_literal.py  prompts.py  toy_crsa.py  toy_crsa_turn.py  utils.py
src/crsa.v2/tests/: crsa.py  llm.py  memoryless_rsa.py
src/crsa.v3/scripts/: run_dataset.py  run_findA1.py  run_llm.py
src/crsa.v3/src/: utils.py
src/crsa.v4/old/: crsa.py  crsa2.py  naive_crsa.py
src/crsa.v4/tests/: mddial.py
src/crsa/scripts/: crsa_hyperparams.py  (+20 more)
(+1993 files in other folders)
