[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crsaarr"
version = "0.0.1"
authors = [
  { name="name", email="name@name.com" },
]
description = "Collaborative Rational Speech Act model."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://name.com"
Issues = "https://name.com/issues"